# ppmfun

./: .gitignore  CMakeLists.txt  README.md  frame.h  frame_utils.cpp  frame_utils.h  msf_gif.h  ppmviewer.cpp  pure.cpp  rand_animation.cpp  rand_ppm.cpp  sphere.cpp  sphere_animate.cpp  stb_image_write.h  wave_ppm.cpp
